--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   "dependencies": {
     "react": "16.6.1",
     "react-native": "0.57.7",
+    "react-native-elements": "^0.19.1",
+    "react-native-vector-icons": "^6.1.0",
+    "react-navigation": "^3.0.7",
+    "react-navigation-redux-helpers": "^2.0.8",
     "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
     "redux-saga": "^0.16.2"
   },
   "devDependencies": {
