--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-navigation-redux-helpers": "^2.0.8",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
-    "redux-saga": "^0.16.2"
+    "redux-saga": "^0.16.2",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
