--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "immutable": "^4.0.0-rc.12",
     "react": "16.6.1",
     "react-native": "0.57.7",
     "react-native-elements": "^0.19.1",
@@ -16,6 +17,7 @@
     "react-navigation-redux-helpers": "^2.0.8",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
+    "redux-immutable": "^4.0.0",
     "redux-saga": "^0.16.2",
     "reselect": "^4.0.0"
   },
